[project]
name = "cube_dbt"
dynamic = ["version"]
description = "dbt integration for Cube"
authors = [
    {name = "Artyom Keydunov", email = "artyom@cube.dev"},
    {name = "Igor Lukanin", email = "igor@cube.dev"},
]
dependencies = [
    "PyYAML>=6.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cube_dbt"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
